...
    Scaffold(
        modifier = modifier,
        topBar = {
            CenterAlignedTopAppBar(
                title = {
                    Text(
                        text = "Actividades",
                        style = MaterialTheme.typography.titleLarge.copy(fontWeight = FontWeight.Medium)
                    )
                },
                modifier = Modifier.fillMaxWidth(),
                navigationIcon = {
                    IconButton(onClick = onSignOut) {
...
        }

        items(
            items = cards,
            key = { taskCard -> taskCard.taskId }
        ) { taskCard ->
            TaskCard(
                taskCard = taskCard,
                onCardClick = { onSelectTask(taskCard.taskId) },
                modifier = Modifier.padding(bottom = 6.dp)
            )
        }
    }
...
