...
                actions = {
                    IconButton(
                        onClick = onTeacherLoginSelected,
                    ) {
                        Icon(
                            imageVector = Icons.Filled.School,
                            contentDescription = "Identificación Profesor",
                            modifier = Modifier.size(32.dp),
                            tint = MaterialTheme.colorScheme.primary
                        )
                    }
                },
                colors = TopAppBarDefaults.centerAlignedTopAppBarColors(
...
